lox-tests/tests/if/fun_in_else.stderr
ERROR: at 'fun': Expected expression, got Fun
 --> 2:22
  |
2 | if (true) "ok"; else fun foo() {}
  |                      ^-^
